--- a/notebooks/1. EDA (Exploratory Data Analysis).ipynb
+++ b/notebooks/1. EDA (Exploratory Data Analysis).ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8c2ccf78",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1beb21f6",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "19c2e95e",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "b32c37fe",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "9974117e",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "0e8c8c84",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,9 @@
    "id": "d7cab8fa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# hi test"
+   ]
   }
  ],
  "metadata": {
