--- a/notebooks/1. EDA (Exploratory Data Analysis).ipynb
+++ b/notebooks/1. EDA (Exploratory Data Analysis).ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "8c2ccf78",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "1beb21f6",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "19c2e95e",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "b32c37fe",
    "metadata": {},
    "outputs": [
@@ -126,37 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9974117e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Data Described:\n",
-      "       PassengerId    Survived      Pclass         Age       SibSp  \\\n",
-      "count   891.000000  891.000000  891.000000  714.000000  891.000000   \n",
-      "mean    446.000000    0.383838    2.308642   29.699118    0.523008   \n",
-      "std     257.353842    0.486592    0.836071   14.526497    1.102743   \n",
-      "min       1.000000    0.000000    1.000000    0.420000    0.000000   \n",
-      "25%     223.500000    0.000000    2.000000   20.125000    0.000000   \n",
-      "50%     446.000000    0.000000    3.000000   28.000000    0.000000   \n",
-      "75%     668.500000    1.000000    3.000000   38.000000    1.000000   \n",
-      "max     891.000000    1.000000    3.000000   80.000000    8.000000   \n",
-      "\n",
-      "            Parch        Fare  \n",
-      "count  891.000000  891.000000  \n",
-      "mean     0.381594   32.204208  \n",
-      "std      0.806057   49.693429  \n",
-      "min      0.000000    0.000000  \n",
-      "25%      0.000000    7.910400  \n",
-      "50%      0.000000   14.454200  \n",
-      "75%      0.000000   31.000000  \n",
-      "max      6.000000  512.329200  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Train Data Described:\")\n",
     "print(train_data.describe())"
@@ -172,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "0e8c8c84",
    "metadata": {},
    "outputs": [
@@ -233,9 +206,123 @@
    "execution_count": null,
    "id": "d7cab8fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId                      1\n",
+       "Survived                       0.0\n",
+       "Pclass                         3.0\n",
+       "Name           Abbing, Mr. Anthony\n",
+       "Sex                           male\n",
+       "Age                           24.0\n",
+       "SibSp                          0.0\n",
+       "Parch                          0.0\n",
+       "Ticket                        1601\n",
+       "Fare                          8.05\n",
+       "Cabin                      B96 B98\n",
+       "Embarked                         S\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# hi test"
+    "#checking mode \n",
+    "train_data.mode().iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24e5b1fb",
+   "metadata": {},
+   "source": [
+    "From the training data, the mode for categories Age, Cabin, and Embarked are 24.0, B96 B98, and S respectively. #bro the cabin got too much missing values idt the mode is accurate for cabin, the rest looks okay so far...\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3235b5f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filled Train Data:\n",
+      "   PassengerId  Survived  Pclass  \\\n",
+      "0            1         0       3   \n",
+      "1            2         1       1   \n",
+      "2            3         1       3   \n",
+      "3            4         1       1   \n",
+      "4            5         0       3   \n",
+      "\n",
+      "                                                Name     Sex   Age  SibSp  \\\n",
+      "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+      "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+      "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+      "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+      "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+      "\n",
+      "   Parch            Ticket     Fare    Cabin Embarked  \n",
+      "0      0         A/5 21171   7.2500  B96 B98        S  \n",
+      "1      0          PC 17599  71.2833      C85        C  \n",
+      "2      0  STON/O2. 3101282   7.9250  B96 B98        S  \n",
+      "3      0            113803  53.1000     C123        S  \n",
+      "4      0            373450   8.0500  B96 B98        S  \n",
+      "     PassengerId  Survived  Pclass                                      Name  \\\n",
+      "886          887         0       2                     Montvila, Rev. Juozas   \n",
+      "887          888         1       1              Graham, Miss. Margaret Edith   \n",
+      "888          889         0       3  Johnston, Miss. Catherine Helen \"Carrie\"   \n",
+      "889          890         1       1                     Behr, Mr. Karl Howell   \n",
+      "890          891         0       3                       Dooley, Mr. Patrick   \n",
+      "\n",
+      "        Sex   Age  SibSp  Parch      Ticket   Fare    Cabin Embarked  \n",
+      "886    male  27.0      0      0      211536  13.00  B96 B98        S  \n",
+      "887  female  19.0      0      0      112053  30.00      B42        S  \n",
+      "888  female  24.0      1      2  W./C. 6607  23.45  B96 B98        S  \n",
+      "889    male  26.0      0      0      111369  30.00     C148        C  \n",
+      "890    male  32.0      0      0      370376   7.75  B96 B98        Q  \n",
+      "Filled Train Data Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          891 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Cabin        891 non-null    object \n",
+      " 11  Embarked     891 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 83.7+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make new dataset with filled data\n",
+    "train_data_filled = train_data.fillna(train_data.mode().iloc[0])\n",
+    "\n",
+    "# View filled train data\n",
+    "print(\"Filled Train Data:\")\n",
+    "print(train_data_filled.head())\n",
+    "print(train_data_filled.tail())\n",
+    "\n",
+    "print(\"Filled Train Data Info:\")\n",
+    "print(train_data_filled.info())"
    ]
   }
  ],
