--- a/notebooks/1. EDA (Exploratory Data Analysis).ipynb
+++ b/notebooks/1. EDA (Exploratory Data Analysis).ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "8c2ccf78",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "1beb21f6",
    "metadata": {},
    "outputs": [],
@@ -122,10 +122,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b32c37fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Data Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          714 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Cabin        204 non-null    object \n",
+      " 11  Embarked     889 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 83.7+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Train Data Info:\")\n",
     "print(train_data.info())"
@@ -133,10 +161,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9974117e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Data Described:\n",
+      "       PassengerId    Survived      Pclass         Age       SibSp  \\\n",
+      "count   891.000000  891.000000  891.000000  714.000000  891.000000   \n",
+      "mean    446.000000    0.383838    2.308642   29.699118    0.523008   \n",
+      "std     257.353842    0.486592    0.836071   14.526497    1.102743   \n",
+      "min       1.000000    0.000000    1.000000    0.420000    0.000000   \n",
+      "25%     223.500000    0.000000    2.000000   20.125000    0.000000   \n",
+      "50%     446.000000    0.000000    3.000000   28.000000    0.000000   \n",
+      "75%     668.500000    1.000000    3.000000   38.000000    1.000000   \n",
+      "max     891.000000    1.000000    3.000000   80.000000    8.000000   \n",
+      "\n",
+      "            Parch        Fare  \n",
+      "count  891.000000  891.000000  \n",
+      "mean     0.381594   32.204208  \n",
+      "std      0.806057   49.693429  \n",
+      "min      0.000000    0.000000  \n",
+      "25%      0.000000    7.910400  \n",
+      "50%      0.000000   14.454200  \n",
+      "75%      0.000000   31.000000  \n",
+      "max      6.000000  512.329200  \n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Train Data Described:\")\n",
     "print(train_data.describe())"
