--- a/notebooks/1. EDA (Exploratory Data Analysis).ipynb
+++ b/notebooks/1. EDA (Exploratory Data Analysis).ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "8c2ccf78",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "1beb21f6",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "19c2e95e",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b32c37fe",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "9974117e",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "d7cab8fa",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "3235b5f7",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
    "source": [
     "# Make new dataset with edited data\n",
     "df_processed = train_data.copy()\n",
-    "df_processed[\"Embarked\"] = df_processed[\"Embarked\"].fillna(df_processed[\"Embarked\"].mode()[0])\n",
+    "df_processed[\"Embarked\"] = df_processed[\"Embarked\"].fillna(train_data[\"Embarked\"].mode()[0])\n",
     "df_processed = df_processed.drop(columns=[\"Cabin\"])\n",
     "df_processed = df_processed.dropna(subset=[\"Age\"])\n",
     "\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "0993ef41",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "92502691",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "7cd42e8d",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "ed518d56",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "38292ad7",
    "metadata": {},
    "outputs": [],
@@ -648,9 +648,19 @@
    "execution_count": null,
    "id": "1fffa0c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original rows: 891\n",
+      "Processed rows: 714\n"
+     ]
+    }
+   ],
    "source": [
     "# Save cleaned data to CSV\n",
+    "print(\"Original rows:\", len(train_data))        \n",
     "df_processed.to_csv('../data/raw/train_processed.csv', index=False)"
    ]
   }
